# homestead-memory

./: .gitignore  .vale.ini  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_STYLE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SECURITY_RELEASE.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rotbench_fixture.yml
.github/workflows/: ci.yml  docs-lint.yml  release.yml  rotbench-example.yml
benchmarks/: README.md  RESULTS.md  ROTBENCH.md  SCOREBOARD.md
deploy/canary/: README.md  deploy.sh  health_gate.sh
deploy/reference/: README.md  homestead-qmd.service  homestead-refresh.service  homestead-refresh.timer
docs/: DISTILL_SPEC.md  MCP_SPEC.md  openapi.yaml
examples/: README.md  fixtures.example.json  hot_swap_demo.py  multi_agent_demo.py
scripts/: local_release_gate.sh  release_5pass.py  verify_artifact.py  wheel_smoke.py
src/fbt_memory/: __init__.py  cli.py
src/fbt_memory/api/: __init__.py  server.py
src/fbt_memory/benchmarks/: __init__.py  longmemeval.py  official_eval.py
src/fbt_memory/core/: __init__.py  index.py  temporal.py  vault.py  verify.py
src/homestead_memory/: __init__.py  cli.py  sdk.py
src/homestead_memory/adapters/: __init__.py  autogen_memory.py  crewai_memory.py  langgraph_store.py  litellm_memory.py  okf.py  openai_agents.py  openai_compat.py  tools.py
src/homestead_memory/api/: __init__.py  mcp_server.py  server.py
src/homestead_memory/benchmarks/: __init__.py  longmemeval.py  official_eval.py
src/homestead_memory/core/: __init__.py  chunking.py  distill.py  index.py  portability.py  provenance.py  qmd_runtime.py  refresh.py  remember.py  resolve.py  signing.py  store.py  telemetry.py  temporal.py  tuning.py  vault.py  verify.py
styles/Homestead/: Idioms.yml  SentenceLength.yml  Terminology.yml
tests/: test_adapters.py  test_cli_bench.py  test_distill.py  test_hot_swap_demo.py  test_index.py  test_litellm_memory.py  test_mcp.py  test_multi_agent_demo.py  test_okf.py  test_openai_compat.py  test_portability.py  test_provenance.py  test_provenance_compat.py  test_qmd_runtime.py  test_refresh.py  test_remember.py  test_resolve.py  test_rotbench_integrity.py  test_sdk.py  test_signing.py  test_store_newlines.py  test_temporal_refresh.py  test_tuning.py  test_vault.py  test_verify_json.py  test_verify_temporal.py
