[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homestead-memory"
version = "0.2.3"
description = "Verifiable, local-first AI memory that catches rot, tampering, and poisoning. Plain markdown you own."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Kinetic Labs" }]
keywords = ["ai", "memory", "local-first", "agents", "verification", "rag", "homestead"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Core is stdlib-only. qmd (hybrid retrieval) is an optional external CLI dependency,
# invoked as a subprocess; the store degrades to a direct markdown scan without it.
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
sign = ["cryptography>=42"]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.70"]
autogen = ["autogen-core>=0.4"]
openai-agents = ["openai-agents>=0.0.1"]
litellm = ["litellm>=1.40"]

[project.scripts]
hsm = "homestead_memory.cli:main"
fbt = "homestead_memory.cli:main"  # legacy alias, removed before 1.0

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# The example scripts under examples/ are imported by their tests
# (`from examples import hot_swap_demo`). Put the repo root on sys.path so the
# bare `pytest` console script (as CI runs it) behaves like `python -m pytest`.
pythonpath = ["."]
testpaths = ["tests"]
